--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -179,7 +179,7 @@ a:focus {
   left: 0;
   z-index: 50;
   @media (min-width: $wide) {
-    margin: 46px 0 0 0;
+    margin: 46px 0 0 0;    
   } 
 }
 
@@ -199,6 +199,7 @@ a:focus {
 
   @media (min-width: $wide) {
     padding: 0 80px;
+    background: #D9D9D9;
   }
 }
 
@@ -805,9 +806,6 @@ footer {
   h3 {
     text-align: center;
   }
-  @media (min-width: $wide) {      
-           
-  }
   @media (min-width: $wide){
     height: 100%;
     flex-direction: row;
@@ -844,6 +842,7 @@ footer {
 .amazon-link {
   background-color: #6BCADF;
   width: 300px;
+  max-width: 100%;
   height: 80px;
   
   border: 4px solid #165A69;
@@ -864,6 +863,9 @@ footer {
     font-size: clamp(12px, 6vw, 24px);
     font-weight: 700;
     color: #165A69;
+  }
+  @media (max-width: $narrow){
+    margin: 0 auto;
   }
 }
 .app-image-section {
